Fixed Map Gap

--- a/client/src/static/styles/student-styles.scss
+++ b/client/src/static/styles/student-styles.scss
@@ -79,7 +79,7 @@
 }
 .mapCollapse{
     position:sticky;
-    top:20px;
+    top:10px;
     z-index:500;
 }
    
